// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Search/SearchControls/PlateSearchInput NoPlateNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="jumbotron new-style">
            <div class="row">
              <form class="form">
                <div class="form-row">
                  <div class="col-md">
                    <div class="form-group">
                      <div class="input-group">
                        <input autocomplete="off"
                               class="form-control"
                               id="plate-input"
                               name="plateId"
                               pattern="[a-zA-Z0-9]+"
                               placeholder="Enter a plate..."
                               type="text"
                               value
                        >
                        <button aria-label="clear Plate"
                                class="btn btn-secondary"
                                type="button"
                        >
                          ✕
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/Search/SearchControls/PlateSearchInput NoPlateOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="jumbotron ">
            <div class="row">
              <form class="form">
                <div class="form-row">
                  <div class="col-md">
                    <div class="form-group">
                      <div class="input-group">
                        <input autocomplete="off"
                               class="form-control"
                               id="plate-input"
                               name="plateId"
                               pattern="[a-zA-Z0-9]+"
                               placeholder="Enter a plate..."
                               type="text"
                               value
                        >
                        <button aria-label="clear Plate"
                                class="btn btn-secondary"
                                type="button"
                        >
                          ✕
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/Search/SearchControls/PlateSearchInput PlateEnteredNewStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container new-style">
          <div class="jumbotron new-style">
            <div class="row">
              <form class="form">
                <div class="form-row">
                  <div class="col-md">
                    <div class="form-group">
                      <div class="input-group">
                        <input autocomplete="off"
                               class="form-control"
                               id="plate-input"
                               name="plateId"
                               pattern="[a-zA-Z0-9]+"
                               placeholder="Enter a plate..."
                               type="text"
                               value="ABC1234"
                        >
                        <button aria-label="clear Plate"
                                class="btn btn-secondary"
                                type="button"
                        >
                          ✕
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`Components/Search/SearchControls/PlateSearchInput PlateEnteredOldStyleDisplay smoke-test 1`] = `
<div class="site-container-wrapper">
  <div class="site-container container-fluid">
    <main>
      <div class="row">
        <div class="col-md-12 vehicle-lookup-content-container ">
          <div class="jumbotron ">
            <div class="row">
              <form class="form">
                <div class="form-row">
                  <div class="col-md">
                    <div class="form-group">
                      <div class="input-group">
                        <input autocomplete="off"
                               class="form-control"
                               id="plate-input"
                               name="plateId"
                               pattern="[a-zA-Z0-9]+"
                               placeholder="Enter a plate..."
                               type="text"
                               value="ABC1234"
                        >
                        <button aria-label="clear Plate"
                                class="btn btn-secondary"
                                type="button"
                        >
                          ✕
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;
